admin decor, readability fixed

--- a/styling.css
+++ b/styling.css
@@ -156,3 +156,40 @@ QLabel#student_profile_data_label {
     color: darkblue;
     background-color: yellow;
 }
+
+ /* Administrator login */
+
+ QLabel#admin_dashboard_label {
+    font: bold 30px;
+ }
+
+ QFrame#admin_dashboard_line {
+    background-color: black;
+ }
+
+ QLabel#admin_events_label {
+    font: bold 30px;
+ }
+
+ QFrame#admin_events_line {
+    background-color: black;
+ }
+
+ QLabel#admin_statistics_label {
+    font: bold 30px;
+ }
+
+ QFrame#admin_statistics_line {
+    background-color: black;
+ }
+
+ QLabel#admin_student_view_label {
+    font: bold 30px;
+ }
+
+ QFrame#admin_student_view_line {
+    background-color: black;
+ }
+
+
+
